filtres correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -441,13 +441,7 @@ footer div ul li {
         font-size: 1.2em;
     }
 
-    .filtres p {
-        width: 100%;
-        margin-bottom: 10px;
-    }
-
     .filtres {
-        flex-wrap: wrap;
         padding: 0 20px;
         justify-content: space-around;
         gap: 0;
@@ -456,6 +450,8 @@ footer div ul li {
     .filtres button {
         width: 48%;
         margin: 10px 0;
+        text-align: left;
+        font-size: 0.92em;
     }
 
     .bulle-info {
